# echobind

./: .gitignore  README.md  pyproject.toml
src/: jobs.db  server.py
src/api/app/: config.py  crud.py  server.py
src/app/: crud.py  database.py  models.py  schemas.py  server.py
src/common/: database.py  models.py
src/worker/: main.py  summarizer.py  transcriber.py
