[project]
name = "echobind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi[standard]>=0.139.0",
    "openai-whisper>=20250625",
    "psycopg2-binary>=2.9.12",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]
